# lightshop

./: README.md  icon.svg.import  project.godot
backend/: .gitignore  Cargo.toml  README.md  TreeCal.json  bun.lockb  calibration.txt  correct.json  correct2.json  lightshop.db-shm  lightshop.db-wal  migrate.ts  package-lock.json  package.json  settings.json  tsconfig.json
backend/db/: IDENTITY
backend/db back/: lightshop.db-shm  lightshop.db-wal
backend/src/: cache.ts  connection.rs  db.ts  index.ts  main.rs  player.ts  projects.ts  renderer.ts  trpc.ts  types.ts  util.ts
backend/src/animations/: addmix.ts  alphamix.ts  animations.ts  colorFade.ts  effects.ts  loop.ts  min.ts  mix.ts  presets.ts  reiser.ts  sectionFlash.ts  shot.ts  solid.ts  spiral.ts  spiralFill.ts  swipe.ts  text.ts  timescale.ts  timewiggle.ts  twinkle.ts
backend/src/api/: bpm.ts  clips.ts  player.ts  pool.ts  projects.ts  settings.ts
backend/src/lib/: animation.ts  color.ts  zodworker.ts
backend/src/schema/: bpm.ts  clip.ts  pool.ts  project.ts  schema.ts  settings.ts
frontend/: Cargo.toml  bun.lockb  package.json  pnpm-lock.yaml  shell.nix  svelte.config.js  tsconfig.json
frontend/src/: app.html  main.rs
frontend/src/components/: Clip.svelte  ConfirmModal.svelte  Cursor.svelte  Modal.svelte  NewTargetModal.svelte  ProjectModal.svelte  ResizePanel.svelte  SettingsModal.svelte  Timeline.svelte
frontend/src/lib/: constants.ts  stores.ts  trpc.ts  types.ts  util.ts
frontend/src/projects/: mod.rs
frontend/src/routes/: +layout.svelte  +page.svelte  ProjectRow.svelte
(+47 files in other folders)
