[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.22"
prost = "0.13.1"
tokio = { version = "1", features = ["full"] }
schema = { path="../schema" }
surrealdb = { version = "1.5.4", features = ["kv-rocksdb"] }

[build-dependencies]
prost-build = "0.13.1"
