[package]
name = "lightshop"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
log = "0.4.22"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "cdb18e610a72b4a025d7e1890140393adee5b087"

[dependencies.iced_aw]
git = "https://github.com/iced-rs/iced_aw.git"
rev = "672ee7c5acd3183be80e8ec86a2062aec810757a"
features = ["tab_bar", "tabs", "number_input", "color_picker", "card"]
